# zuko

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
docker/: .dockerignore  python.Dockerfile
docs/: changelog.md  index.md  roadmap.md
docs/architecture/: overview.md
docs/guides/: setup.md
docs/progress/: 2025-08-24.md  template.md
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_models/: test_models.py
zuko/api/: routes.py
zuko/core/: executor.py  files.py  sandbox.py
zuko/models/: __init__.py  execution.py  request.py
